--- a/deliverables/stein/horizon.yaml
+++ b/deliverables/stein/horizon.yaml
@@ -3,5 +3,10 @@ launchpad: horizon
 release-model: cycle-with-milestones
 team: horizon
 type: service
+releases:
+  - version: 15.0.0.0b1
+    projects:
+      - hash: 11fe92baf01619bcb824a68ea96e89fe8b462a25
+        repo: openstack/horizon
 repository-settings:
   openstack/horizon: {}
