--- a/deliverables/queens/openstack-ansible.yaml
+++ b/deliverables/queens/openstack-ansible.yaml
@@ -877,6 +877,10 @@ releases:
       - hash: 077b3ce0c554c4d169582b243419d6b668148c03
         repo: openstack/openstack-ansible
     version: 17.1.2
+  - projects:
+      - hash: 170765999d6c878dc7961a1acc6da0a922e805d5
+        repo: openstack/openstack-ansible
+    version: 17.1.3
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
