--- a/deliverables/pike/openstack-ansible.yaml
+++ b/deliverables/pike/openstack-ansible.yaml
@@ -1592,6 +1592,10 @@ releases:
       - hash: 7b692ea674e298b7cf856c3e1a0f6269cfa0f4fb
         repo: openstack/openstack-ansible
     version: 16.0.20
+  - projects:
+      - hash: bc0098042f6ff7fbda89157bb66483ad65af0ce0
+        repo: openstack/openstack-ansible
+    version: 16.0.21
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
