--- a/deliverables/stein/os-win.yaml
+++ b/deliverables/stein/os-win.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 5d7c91e627575001f8cc8da69028e135c1e21f91
         repo: openstack/os-win
     version: 4.1.0
+  - projects:
+      - hash: 728ddeb4f4dabd8ef16f22a5ce25b53468e4d8ac
+        repo: openstack/os-win
+    version: 4.1.1
