--- a/deliverables/stein/openstacksdk.yaml
+++ b/deliverables/stein/openstacksdk.yaml
@@ -13,5 +13,9 @@ releases:
       - hash: 448cda91e3ea2a9234b150ad6bfd5228472212ed
         repo: openstack/openstacksdk
     version: 0.18.1
+  - projects:
+      - hash: 9947219c4ee8da7b5d8478f0904fbb6f48f9a457
+        repo: openstack/openstacksdk
+    version: 0.19.0
 repository-settings:
   openstack/openstacksdk: {}
