--- a/deliverables/rocky/magnum.yaml
+++ b/deliverables/rocky/magnum.yaml
@@ -14,6 +14,10 @@ releases:
       - hash: 0dbe6806ed51fdc08e7b118ac10eedd53d365b5b
         repo: openstack/magnum
     version: 7.0.1
+  - projects:
+      - hash: 52beaa41afa71161a60bd8e6cd262908cac005ea
+        repo: openstack/magnum
+    version: 7.0.2
 branches:
   - name: stable/rocky
     location: 7.0.0
