--- a/deliverables/rocky/keystone.yaml
+++ b/deliverables/rocky/keystone.yaml
@@ -29,6 +29,10 @@ releases:
       - hash: c767e254979c96858a81cc4bbe8d9773d4dd539b
         repo: openstack/keystone
     version: 14.0.0
+  - projects:
+      - hash: ec1c2e4f7bc20e6a70140c0be614d6c001973d1e
+        repo: openstack/keystone
+    version: 14.0.1
 cycle-highlights:
   - |
     Support for a new hierarchical enforcement model has been implemented in
