--- a/deliverables/queens/keystone.yaml
+++ b/deliverables/queens/keystone.yaml
@@ -36,6 +36,10 @@ releases:
       - hash: 7b1b6a6fc8bdbd2218501282be760d87d096de61
         repo: openstack/keystone
     version: 13.0.1
+  - projects:
+      - hash: db14ee24a7102f1f9f0f95ac55ea39da1fb88e26
+        repo: openstack/keystone
+    version: 13.0.2
 cycle-highlights:
   - |
     Keystone now offers a better story for applications interacting with
