--- a/deliverables/pike/keystone.yaml
+++ b/deliverables/pike/keystone.yaml
@@ -33,6 +33,10 @@ releases:
       - hash: ce46cc25dc4d967c062587ab21b2b38cab045e00
         repo: openstack/keystone
     version: 12.0.1
+  - projects:
+      - hash: ec87e19f40ea561e325b8e26debf303ad775643d
+        repo: openstack/keystone
+    version: 12.0.2
 branches:
   - location: 12.0.0.0rc1
     name: stable/pike
