--- a/deliverables/stein/os-ken.yaml
+++ b/deliverables/stein/os-ken.yaml
@@ -11,3 +11,7 @@ releases:
     projects:
       - repo: openstack/os-ken
         hash: da39949131ff43761af83329c6d82e979d95440f
+  - version: 0.2.0
+    projects:
+      - repo: openstack/os-ken
+        hash: 28c7fa6acab224fd99bf7ac667bbc2fd7cd0edd7
