--- a/deliverables/stein/python-zunclient.yaml
+++ b/deliverables/stein/python-zunclient.yaml
@@ -13,5 +13,9 @@ releases:
     projects:
       - repo: openstack/python-zunclient
         hash: 5b9b737d13780abaed62ebecf54a78be31217262
+  - version: 3.2.0
+    projects:
+      - repo: openstack/python-zunclient
+        hash: f5787a4b83af6a924b7ac1680dad55c48ef666c7
 repository-settings:
   openstack/python-zunclient: {}
