--- a/deliverables/rocky/python-glanceclient.yaml
+++ b/deliverables/rocky/python-glanceclient.yaml
@@ -19,6 +19,10 @@ releases:
       - hash: b79154c5fe68789389d54decc8dfc23c3e2021ef
         repo: openstack/python-glanceclient
     version: 2.12.1
+  - projects:
+      - hash: 395d0f157bed9dbc4e6e125f21e8b1879c26ccdb
+        repo: openstack/python-glanceclient
+    version: 2.13.0
 branches:
   - location: 2.12.0
     name: stable/rocky
