nova: release rocky 18.0.3
Change-Id: I872e0541ec11ecbbfbbd9f99fb570c48b0b5033e

--- a/deliverables/rocky/nova.yaml
+++ b/deliverables/rocky/nova.yaml
@@ -44,6 +44,10 @@ releases:
       - hash: 55b63c4d608c0cf779d6a72af52254fe5efb7466
         repo: openstack/nova
     version: 18.0.2
+  - projects:
+      - hash: 16d5bb74d7f74fa44637d89292012092202e8e36
+        repo: openstack/nova
+    version: 18.0.3
 branches:
   - location: 18.0.0.0rc1
     name: stable/rocky
