cliff 2.14.0 for stien
2.14.0 includes a bug fix that unlocks the inclusion of openstacksdk.
It could have been 2.13.1 but I left the 2.13.x series for rocky "just
in case"

Change-Id: Iad406acae7edbc01b7b2dfe815a287e7e4684a12

--- a/deliverables/stein/cliff.yaml
+++ b/deliverables/stein/cliff.yaml
@@ -6,3 +6,8 @@ team: OpenStackClient
 type: library
 repository-settings:
   openstack/cliff: {}
+releases:
+  - projects:
+      - hash: cd6cd9d2d7c1c0e06f35a45f6d8b21b0d81f88d5
+        repo: openstack/cliff
+    version: 2.14.0
