--- a/deliverables/rocky/neutron-vpnaas.yaml
+++ b/deliverables/rocky/neutron-vpnaas.yaml
@@ -28,6 +28,10 @@ releases:
       - hash: da4fff7e7aa756cd8280e8dd14fb8cccc5777277
         repo: openstack/neutron-vpnaas
     version: 13.0.0
+  - projects:
+      - hash: 0876f4dfe7e2f57305110e035efa753bfb711a3f
+        repo: openstack/neutron-vpnaas
+    version: 13.0.1
 branches:
   - location: 13.0.0.0rc1
     name: stable/rocky
