neutron, fwaas, vpnaas queens update
Change-Id: I1b9dbccd98084d0b173d0d38e2f42d336cad82df

--- a/deliverables/queens/neutron-vpnaas.yaml
+++ b/deliverables/queens/neutron-vpnaas.yaml
@@ -9,6 +9,10 @@ releases:
       - hash: 1ec25e8f6ffca003ba123f14a52350f4203a7e82
         repo: openstack/neutron-vpnaas
     version: 12.0.0
+  - projects:
+      - hash: 3f36a0a552c30f103966ddfbd1373fd04aa8a9f4
+        repo: openstack/neutron-vpnaas
+    version: 12.0.1
 branches:
   - location: 12.0.0
     name: stable/queens
