--- a/deliverables/queens/neutron.yaml
+++ b/deliverables/queens/neutron.yaml
@@ -45,6 +45,10 @@ releases:
       - hash: 901d49b4a62eade2c2ddbf6185b262008b1690c6
         repo: openstack/neutron
     version: 12.0.4
+  - projects:
+      - hash: af84349a4cca1bb1dbca9d6444f3c50bbe260683
+        repo: openstack/neutron
+    version: 12.0.5
 repository-settings:
   openstack/neutron: {}
 branches:
