--- a/deliverables/queens/neutron-fwaas.yaml
+++ b/deliverables/queens/neutron-fwaas.yaml
@@ -26,6 +26,10 @@ releases:
       - hash: 4bc4fa5af14b362a38ead50e2673a0378f43fc57
         repo: openstack/neutron-fwaas
     version: 12.0.0
+  - projects:
+      - hash: a3c335a9c6a1672337fa3de72c5f31157f5eeaa1
+        repo: openstack/neutron-fwaas
+    version: 12.0.1
 repository-settings:
   openstack/neutron-fwaas: {}
 branches:
