--- a/deliverables/_independent/yaml2ical.yaml
+++ b/deliverables/_independent/yaml2ical.yaml
@@ -44,5 +44,9 @@ releases:
       - hash: 0d1125f618c3c9954714e67c2c09827f18990c0d
         repo: openstack-infra/yaml2ical
     version: 0.8.1
+  - projects:
+      - hash: 6a2106440138a53eb288b960a06743d2e57138b1
+        repo: openstack-infra/yaml2ical
+    version: 0.9.0
 repository-settings:
   openstack-infra/yaml2ical: {}
