neutron, fwaas pike update
Change-Id: Id0bc0f6b1dfa3f6f279ca777c56d655a153687d8

--- a/deliverables/pike/neutron-fwaas.yaml
+++ b/deliverables/pike/neutron-fwaas.yaml
@@ -34,6 +34,10 @@ releases:
       - hash: 352dce5cc2cdbcf033c67b7f5ac6d5ed9c2702c5
         repo: openstack/neutron-fwaas
     version: 11.0.1
+  - projects:
+      - hash: 2df0379dec47aa55c6aec93537081a8140d3296d
+        repo: openstack/neutron-fwaas
+    version: 11.0.2
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
