--- a/deliverables/pike/neutron.yaml
+++ b/deliverables/pike/neutron.yaml
@@ -54,6 +54,10 @@ releases:
       - hash: e3ff53e3fcf6f12b25788642a281d69cbb3943c1
         repo: openstack/neutron
     version: 11.0.5
+  - projects:
+      - hash: d91307964bfdb49d63cea543a43d2cfaa5a58eeb
+        repo: openstack/neutron
+    version: 11.0.6
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
