--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -140,5 +140,9 @@ releases:
       - hash: 2554db65616feb2d0ea4af3b4336ac9763118726
         repo: openstack/pymod2pkg
     version: 0.15.0
+  - projects:
+      - hash: 29aa5b582e33b85695a673be09293d1d5b6a5959
+        repo: openstack/pymod2pkg
+    version: 0.16.0
 repository-settings:
   openstack/pymod2pkg: {}
