--- a/deliverables/rocky/mistral.yaml
+++ b/deliverables/rocky/mistral.yaml
@@ -69,6 +69,10 @@ releases:
       - hash: 24f8ef65d04e4acfb6df15d3544d08041b0a422b
         repo: openstack/mistral
     version: 7.0.3
+  - projects:
+      - hash: 8306fa17eb7ae7e4a0f33f5f362be46daff4f0a9
+        repo: openstack/mistral
+    version: 7.0.4
 repository-settings:
   openstack/mistral: {}
   openstack/mistral-dashboard: {}
