Oslo releases for 2018-11-5
Change-Id: I24e8ba7e7a0d268bf1f965ecac57be4a23ba6005

--- a/deliverables/_independent/pbr.yaml
+++ b/deliverables/_independent/pbr.yaml
@@ -116,5 +116,9 @@ releases:
       - hash: bd300d07ee016bf04b5da783fa696754b8a49af8
         repo: openstack-dev/pbr
     version: 5.1.0
+  - projects:
+      - hash: 6a88aadaa8352bd1c687ef8234c6ad74159276de
+        repo: openstack-dev/pbr
+    version: 5.1.1
 repository-settings:
   openstack-dev/pbr: {}
