--- a/deliverables/_independent/sphinx-feature-classification.yaml
+++ b/deliverables/_independent/sphinx-feature-classification.yaml
@@ -16,5 +16,9 @@ releases:
       - hash: c07a2e9cf61e749a4e002df1bf1867b86bd9a427
         repo: openstack/sphinx-feature-classification
     version: 0.3.0
+  - projects:
+      - hash: bf3c873913f3eb1ee71e837254d4b69d44d00e84
+        repo: openstack/sphinx-feature-classification
+    version: 0.3.1
 repository-settings:
   openstack/sphinx-feature-classification: {}
