--- a/deliverables/stein/oslo.config.yaml
+++ b/deliverables/stein/oslo.config.yaml
@@ -29,3 +29,7 @@ releases:
       - hash: c09b80440a5b8055a67c36706e20ddd80110b4bf
         repo: openstack/oslo.config
     version: 6.6.2
+  - projects:
+      - hash: 64e020adbb5b31a1f6ffb01f84f049562f09c788
+        repo: openstack/oslo.config
+    version: 6.7.0
