--- a/deliverables/stein/oslo.db.yaml
+++ b/deliverables/stein/oslo.db.yaml
@@ -17,3 +17,7 @@ releases:
         hash: e64c6bb6970b61b9f8aa704c5b2ac6e1f9c382d3
         repo: openstack/oslo.db
     version: 4.41.1
+  - projects:
+      - hash: fb12d340e8c9790d9c67f19ffa1fef82616458d5
+        repo: openstack/oslo.db
+    version: 4.42.0
