--- a/deliverables/stein/oslo.messaging.yaml
+++ b/deliverables/stein/oslo.messaging.yaml
@@ -23,3 +23,7 @@ releases:
       - hash: 92b4080654b9ecb68250905e45eec65f41e5b161
         repo: openstack/oslo.messaging
     version: 9.1.1
+  - projects:
+      - hash: 1a781bd6dca5f56593c530be9707e48bccff8e0c
+        repo: openstack/oslo.messaging
+    version: 9.2.0
