--- a/deliverables/stein/oslo.policy.yaml
+++ b/deliverables/stein/oslo.policy.yaml
@@ -25,3 +25,7 @@ releases:
       - hash: fe898122c8cbf8b00e35307c719a04724bfecf46
         repo: openstack/oslo.policy
     version: 1.40.1
+  - projects:
+      - hash: f79650325f459e12bbac8f6967dcfabece1de7a4
+        repo: openstack/oslo.policy
+    version: 1.41.0
