--- a/deliverables/stein/oslo.service.yaml
+++ b/deliverables/stein/oslo.service.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 2705800cd32b383df80f872577ccca2cab6f3522
         repo: openstack/oslo.service
     version: 1.32.0
+  - projects:
+      - hash: 3e08f3375e2a79c04050a562f6588934638c70e9
+        repo: openstack/oslo.service
+    version: 1.32.1
