--- a/deliverables/stein/oslo.upgradecheck.yaml
+++ b/deliverables/stein/oslo.upgradecheck.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 452bd239549f5cbb99e6007828faf8bc387233c7
         repo: openstack/oslo.upgradecheck
     version: 0.1.0
+  - projects:
+      - hash: c4283dd0ebbb2e64947b966e51b7f3f47233b7be
+        repo: openstack/oslo.upgradecheck
+    version: 0.1.1
