--- a/deliverables/stein/osprofiler.yaml
+++ b/deliverables/stein/osprofiler.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: e6c5f57f13334fee04f4cbf1e9c7e98050009f3b
         repo: openstack/osprofiler
     version: 2.5.0
+  - projects:
+      - hash: 48a3de18f81f7ee5b4c12931d1d344232900dcd3
+        repo: openstack/osprofiler
+    version: 2.5.1
