--- a/deliverables/queens/mistral.yaml
+++ b/deliverables/queens/mistral.yaml
@@ -74,6 +74,10 @@ releases:
       - hash: 824c1033633da184bec0e31c4ee17327028a93eb
         repo: openstack/mistral
     version: 6.0.5
+  - projects:
+      - hash: 241d0b4d4e5f7aa203adf1dcacb3794c5dff4522
+        repo: openstack/mistral
+    version: 6.0.6
 repository-settings:
   openstack/mistral: {}
   openstack/mistral-dashboard: {}
