--- a/deliverables/pike/mistral.yaml
+++ b/deliverables/pike/mistral.yaml
@@ -101,6 +101,10 @@ releases:
       - hash: 45c9d4ece0070e4c937b546852dfc0123c03fde4
         repo: openstack/mistral
     version: 5.2.6
+  - projects:
+      - hash: 4a7065c6a35da837b575318f996d48b7c86033c0
+        repo: openstack/mistral
+    version: 5.2.7
 branches:
   - location: 5.0.0.0rc1
     name: stable/pike
