--- a/deliverables/rocky/bifrost.yaml
+++ b/deliverables/rocky/bifrost.yaml
@@ -10,6 +10,10 @@ releases:
       - hash: ad4d61bb4d543bf824660727accc1f240f53c461
         repo: openstack/bifrost
     version: 5.1.0
+  - projects:
+      - hash: 1ea45d1e7a9556ead6b3707f657348a4e9cadfdb
+        repo: openstack/bifrost
+    version: 5.1.1
 branches:
   - location: 5.1.0
     name: stable/rocky
