--- a/deliverables/stein/neutron-lib.yaml
+++ b/deliverables/stein/neutron-lib.yaml
@@ -11,3 +11,7 @@ releases:
     projects:
       - repo: openstack/neutron-lib
         hash: 0cea7b9debaf5d48465ca86e1a989422d4831aa1
+  - projects:
+      - hash: 8dc31ec5f2db6e6ff5b2b4d4a27c239de5e12cfb
+        repo: openstack/neutron-lib
+    version: 1.20.0
