--- a/deliverables/rocky/python-barbicanclient.yaml
+++ b/deliverables/rocky/python-barbicanclient.yaml
@@ -8,6 +8,10 @@ releases:
       - hash: 985c46edd50595ba9e1c528c1893fc77a727078e
         repo: openstack/python-barbicanclient
     version: 4.7.0
+  - projects:
+      - hash: c8b10fdb657f144258df871383fa61cead8a0b61
+        repo: openstack/python-barbicanclient
+    version: 4.7.1
 repository-settings:
   openstack/python-barbicanclient: {}
 branches:
