--- a/deliverables/_independent/yaml2ical.yaml
+++ b/deliverables/_independent/yaml2ical.yaml
@@ -48,5 +48,9 @@ releases:
       - hash: 6a2106440138a53eb288b960a06743d2e57138b1
         repo: openstack-infra/yaml2ical
     version: 0.9.0
+  - projects:
+      - hash: 02ba0f5a806721529bc185ccb2d1b589f9e4af73
+        repo: openstack-infra/yaml2ical
+    version: 0.10.0
 repository-settings:
   openstack-infra/yaml2ical: {}
