--- a/deliverables/stein/oslo.service.yaml
+++ b/deliverables/stein/oslo.service.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 3e08f3375e2a79c04050a562f6588934638c70e9
         repo: openstack/oslo.service
     version: 1.32.1
+  - projects:
+      - hash: b85d9353fb3b41409f90df91154f87616b4ca61e
+        repo: openstack/oslo.service
+    version: 1.33.0
