--- a/deliverables/rocky/oslo.service.yaml
+++ b/deliverables/rocky/oslo.service.yaml
@@ -37,6 +37,10 @@ releases:
         hash: 67a8a8c7f5c606bd1ef394069d6a4969d21ae3a5
         repo: openstack/oslo.service
     version: 1.31.5
+  - projects:
+      - hash: 6566ec5e4b143f47a835223e5bcbe68766c52f7a
+        repo: openstack/oslo.service
+    version: 1.31.6
 branches:
   - location: 1.31.3
     name: stable/rocky
