--- a/deliverables/stein/python-openstackclient.yaml
+++ b/deliverables/stein/python-openstackclient.yaml
@@ -6,3 +6,8 @@ team: OpenStackClient
 type: other
 repository-settings:
   openstack/python-openstackclient: {}
+releases:
+  - version: 3.17.0
+    projects:
+      - repo: openstack/python-openstackclient
+        hash: 0d764cdb5a1f9a8b113721634fcc8948ddd82c8d
