--- a/deliverables/stein/puppet-tempest.yaml
+++ b/deliverables/stein/puppet-tempest.yaml
@@ -5,3 +5,8 @@ team: 'Puppet OpenStack'
 type: other
 repository-settings:
   openstack/puppet-tempest: {}
+releases:
+  - projects:
+      - hash: aba5e05ca7cc5f500708be8ad0e25ccc5bb7035e
+        repo: openstack/puppet-tempest
+    version: 14.1.0
