--- a/deliverables/stein/puppet-glare.yaml
+++ b/deliverables/stein/puppet-glare.yaml
@@ -5,3 +5,8 @@ team: 'Puppet OpenStack'
 type: other
 repository-settings:
   openstack/puppet-glare: {}
+releases:
+  - projects:
+      - hash: f82d48c17734e1265f82bd1f5e82d46d08f87cc7
+        repo: openstack/puppet-glare
+    version: 3.1.0
