--- a/deliverables/stein/puppet-nova.yaml
+++ b/deliverables/stein/puppet-nova.yaml
@@ -5,3 +5,8 @@ team: 'Puppet OpenStack'
 type: other
 repository-settings:
   openstack/puppet-nova: {}
+releases:
+  - projects:
+      - hash: 93747c8a5fdb16f6f3da2657d86319982094940f
+        repo: openstack/puppet-nova
+    version: 14.1.0
