--- a/deliverables/stein/puppet-ovn.yaml
+++ b/deliverables/stein/puppet-ovn.yaml
@@ -5,3 +5,8 @@ team: 'Puppet OpenStack'
 type: other
 repository-settings:
   openstack/puppet-ovn: {}
+releases:
+  - projects:
+      - hash: bbcede1e6aba6d34ea330f8389ad6e1fcf790a2a
+        repo: openstack/puppet-ovn
+    version: 14.1.0
