--- a/deliverables/stein/puppet-qdr.yaml
+++ b/deliverables/stein/puppet-qdr.yaml
@@ -5,3 +5,8 @@ team: 'Puppet OpenStack'
 type: other
 repository-settings:
   openstack/puppet-qdr: {}
+releases:
+  - projects:
+      - hash: 4b208031f12763201647c53a001645b2a0bbea1d
+        repo: openstack/puppet-qdr
+    version: 3.1.0
