python-neutronclient 6.11.0 (Stein)
This release is to cover fix of bug [1] which made
python-neutronclient unusable.

[1] https://bugs.launchpad.net/python-neutronclient/+bug/1801360

Change-Id: Ie7061caf412359c3480484703af0bbe87efc7801

--- a/deliverables/stein/python-neutronclient.yaml
+++ b/deliverables/stein/python-neutronclient.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 301aa7e161642727be2428dbb61a4f8132dc8380
         repo: openstack/python-neutronclient
     version: 6.10.0
+  - projects:
+      - hash: d8cb1472c867d2a308e26abea0b0a01f1d6629a1
+        repo: openstack/python-neutronclient
+    version: 6.11.0
