--- a/deliverables/rocky/ironic-tempest-plugin.yaml
+++ b/deliverables/rocky/ironic-tempest-plugin.yaml
@@ -10,5 +10,9 @@ releases:
       - hash: 3dc8f79c86b5b4dafb1c2ae9e38baae5a725af32
         repo: openstack/ironic-tempest-plugin
     version: 1.2.0
+  - projects:
+      - hash: 4b1e4a3b31d4935209fc755f39b8ab5f63b930c7
+        repo: openstack/ironic-tempest-plugin
+    version: 1.2.1
 team: ironic
 type: tempest-plugin
