oslo stein releases for 19 Nov
Change-Id: Iab53b5fb3ad1069f8a654d7e3c47821a9beab200
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/stein/oslo.log.yaml
+++ b/deliverables/stein/oslo.log.yaml
@@ -17,3 +17,7 @@ releases:
         hash: a93c6ef98c8aeddc5a4ae87083689225fbc728bb
         repo: openstack/oslo.log
     version: 3.40.1
+  - projects:
+      - hash: 059873c93255743efd3dc15e4361f306010961b5
+        repo: openstack/oslo.log
+    version: 3.41.0
