--- a/deliverables/stein/oslo.messaging.yaml
+++ b/deliverables/stein/oslo.messaging.yaml
@@ -27,3 +27,7 @@ releases:
       - hash: 1a781bd6dca5f56593c530be9707e48bccff8e0c
         repo: openstack/oslo.messaging
     version: 9.2.0
+  - projects:
+      - hash: fb3ab00d1d8778ff4460ec475124585f4febe042
+        repo: openstack/oslo.messaging
+    version: 9.2.1
