--- a/deliverables/stein/oslo.concurrency.yaml
+++ b/deliverables/stein/oslo.concurrency.yaml
@@ -17,3 +17,7 @@ releases:
         hash: d56295b8a91ab1b6fe1cc402e58404d86d1cd97c
         repo: openstack/oslo.concurrency
     version: 3.28.1
+  - projects:
+      - hash: 0767ddf4c2b0d9c9866658e9eadb96b542aba57b
+        repo: openstack/oslo.concurrency
+    version: 3.29.0
