oslo rocky releases for 19 Nov
Change-Id: Icb1d18103f58bd36e75c37e2e7171c475f52ecca
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/rocky/oslo.config.yaml
+++ b/deliverables/rocky/oslo.config.yaml
@@ -43,6 +43,10 @@ releases:
       - hash: ce150b10378aaf4f8b140a20a627b89c384c8867
         repo: openstack/oslo.config
     version: 6.4.0
+  - projects:
+      - hash: 1884c307a9502393d275e0d5c5b2e56343792908
+        repo: openstack/oslo.config
+    version: 6.4.1
 branches:
   - location: 6.4.0
     name: stable/rocky
