--- a/deliverables/rocky/oslo.cache.yaml
+++ b/deliverables/rocky/oslo.cache.yaml
@@ -19,6 +19,10 @@ releases:
       - hash: eedaff4cac47ad4a39fdccfeb71b8c63ff2e2463
         repo: openstack/oslo.cache
     version: 1.30.1
+  - projects:
+      - hash: df3ac080b80121654457995bd5c6b21c00de96a7
+        repo: openstack/oslo.cache
+    version: 1.30.2
 branches:
   - location: 1.30.1
     name: stable/rocky
