--- a/deliverables/rocky/openstack-ansible.yaml
+++ b/deliverables/rocky/openstack-ansible.yaml
@@ -160,6 +160,10 @@ releases:
       - hash: 6aa831eb43b5cc053a211e79ae1312e08961837e
         repo: openstack/openstack-ansible
     version: 18.0.0
+  - projects:
+      - hash: 5903a8dc4307d3654f6d590a72d788acd12139b4
+        repo: openstack/openstack-ansible
+    version: 18.1.0
 branches:
   - location: 18.0.0.0rc1
     name: stable/rocky
