--- a/deliverables/queens/openstack-ansible.yaml
+++ b/deliverables/queens/openstack-ansible.yaml
@@ -881,6 +881,10 @@ releases:
       - hash: 170765999d6c878dc7961a1acc6da0a922e805d5
         repo: openstack/openstack-ansible
     version: 17.1.3
+  - projects:
+      - hash: 983a324a3b2649b5d8957b74d52d6432ed124396
+        repo: openstack/openstack-ansible
+    version: 17.1.4
 repository-settings:
   openstack/ansible-hardening: {}
   openstack/openstack-ansible: {}
